@@ -1,6 +1,6 @@
 swaks version DEVRELEASE
 
-        Copyright (c) 2003-2008,2010-2019 John Jetmore <jj33@pobox.com>
+        Copyright (c) 2003-2008,2010-YEAR John Jetmore <jj33@pobox.com>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
